tests/syntax_error/parentheses_array_end.jou
def blah() -> None:
    thing: byte[10]
    x = array_end thing  # Error: value after array_end must be in parentheses, e.g. array_end(foo)
